# pyTHM

./: LICENSE  README.md  pyproject.toml
data/PSBT/: PSBT_cleaned.csv
pyTHM/: __init__.py
pyTHM/Conduction/: __init__.py  conduction.py
pyTHM/Convection/: __init__.py  convection.py
pyTHM/Solver/: __init__.py  linalg.py  main.py
pyTHM/WaterProperties/: __inti__.py  waterProperties.py
tests/: conftest.py  test_PSBT.py
tutorials/: pyTHM_sine_vs_flat_power.py
